--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^18.3.1"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.2",
     "@vitejs/plugin-react": "^4.3.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "tailwind-merge": "^3.0.2",
     "vite-plugin-dts": "^4.5.3"
