--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "types": "./dist/types/index.d.ts",
   "scripts": {
     "build": "vite build",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "build:dev": "vite build --mode development"
   },
   "devDependencies": {
     "@types/react": "^19.0.12",
