--- a/package.json
+++ b/package.json
@@ -1,44 +1,34 @@
 {
   "name": "mes.ui.components",
-  "version": "1.0.0",
-  "main": "./dist/my-react-ui-library.umd.js",
-  "module": "./dist/my-react-ui-library.es.js",
-  "types": "./dist/types/index.d.ts",
+  "version": "0.1.0",
+  "type": "module",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "dev": "vite --config vite.config.dev.ts",
-    "build": "vite build",
-    "prepublishOnly": "npm run build",
-    "build:dev": "vite build --mode development"
-  },
-  "devDependencies": {
-    "@types/node": "^22.13.13",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
-    "eslint": "^9.23.0",
-    "prettier": "^3.5.3",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.3"
+    "build": "tsc && vite build",
+    "lint": "eslint .",
+    "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
-  "dependencies": {
-    "@radix-ui/react-slot": "^1.1.2",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.21",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "jsx-runtime": "^1.2.0",
-    "postcss": "^8.5.3",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.17",
-    "vite-plugin-dts": "^4.5.3"
-  },
-  "exports": {
-    ".": {
-      "import": "./dist/my-react-ui-library.es.js",
-      "require": "./dist/my-react-ui-library.umd.js"
-    }
+  "devDependencies": {
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^9.9.1",
+    "postcss": "^8.4.35",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.2",
+    "vite-plugin-dts": "^3.7.3"
   }
 }
